# QHM

./: GraphModuloName.py  Main.py  NameAlgebra.py  QHM.py  README.md  utils.py
C++/: CMakeLists.txt  Graph.cpp  Graph.h  Name.cpp  Name.h  State.cpp  State.h  main.cpp
python/: Main.py  NameAlgebra.py  NameSet.py  utils.py
